Button button type and size styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,13 @@
 // config
-
 @import "variables";
 
 // layout
-
 @import "reboot";
 
-// button
 
+//mixin
+@import "mixin";
+
+
+// button
 @import "../components/Button/style";
