--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,10 +4,11 @@
 // layout
 @import "reboot";
 
-
 //mixin
 @import "mixin";
 
+// animation
+@import "animation";
 
 // button
 @import "../components/Button/style";
